other/resources/minio/minio-bitnami-ml-http-proxy.in.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: minio-ml-console-httpproxy
  namespace: YOUR_SESSION_NAMESPACE
spec:
  routes:
    - conditions:
        - prefix: /
      services:
        - name: minio
          port: 9001
  virtualhost:
    fqdn: minio-console-YOUR_SESSION_NAMESPACE.${DATA_E2E_BASE_URL}
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: minio-ml-httpproxy
  namespace: YOUR_SESSION_NAMESPACE
spec:
  routes:
    - conditions:
        - prefix: /
      services:
        - name: minio
          port: 9000
  virtualhost:
    fqdn: minio-YOUR_SESSION_NAMESPACE.${DATA_E2E_BASE_URL}
